deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: symfony-app
  namespace: dev
  labels:
    app: symfony-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: symfony-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25% 
  template:
    metadata:
      labels:
        app: symfony-app
    spec:
      containers:
      - name: my-apache-app
        image: symfony-app
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c", "/usr/local/bin/entrypoint.sh"] 
        volumeMounts:
        - name: app-code
          mountPath: /usr/src/app
        - name: apache-config
          mountPath: /etc/apache2/sites-available/000-default.conf
          subPath: apache.conf 
        - name: entrypoint-script
          mountPath: /usr/local/bin/entrypoint.sh
          subPath: entrypoint.sh
      volumes:
      - name: app-code
        persistentVolumeClaim:
          claimName: symfony-app-pvc
      - name: apache-config
        configMap:
          name: apache-config
      - name: entrypoint-script
        configMap:
          name: entrypoint-config
          defaultMode: 0755
